@@ -1,3 +1,8 @@
+Wed Nov 17 10:23:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
+          Resolved compile error.
+
 Wed Nov 17 10:14:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/Writer_T.cpp:
